--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "framer-motion": "^12.31.0",
+    "lucide-react": "^0.563.0",
     "next": "16.0.10",
+    "openai": "^6.17.0",
+    "qrcode": "^1.5.4",
     "react": "19.2.1",
     "react-dom": "19.2.1"
   },
